src/objects/StudentTaskAttempt__c.object
<CustomObject>
    <description>Object Description: Used to track vendor assessment scores information.</description>
    <fields>
        <fullName>AdditionalContactInfo__c</fullName>
        <description>Additional contact info outside of site name, address, phone and email</description>
        <formula>CASE(SelectedScheduleOption__c,  1, ProctorSite1__r.AdditionalContactInfo__c, 
                                 2, ProctorSite2__r.AdditionalContactInfo__c, 
                                 3, ProctorSite3__r.AdditionalContactInfo__c, null)</formula>
        <label>Additional Contact Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessmentDate__c</fullName>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AssessmentInstructions__c</fullName>
        <description>Instructions from the assessment</description>
        <formula>Assessment__r.Instructions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Instructions from the assessment</inlineHelpText>
        <label>Assessment Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessmentName__c</fullName>
        <description>The Name of the assessment</description>
        <formula>Assessment__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product with assessment record type</description>
        <label>Assessment</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Student Task Attempts</relationshipLabel>
        <relationshipName>StudentTaskAttempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AttemptNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of previous attempts for this student on this assessment/task</description>
        <inlineHelpText>The number of previous attempts for this student on this assessment/task</inlineHelpText>
        <label>Attempt Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>ScoresInformation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactStatus__c</fullName>
        <description>The status of the contact with the student/Proctor</description>
        <inlineHelpText>The status of the contact with the student/Proctor</inlineHelpText>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proctor first contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proctor second contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proctor third contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student first contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student second contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student third contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need dates/times 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need dates&apos;times 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need location 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need location 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConvertedDate__c</fullName>
        <formula>IF( ISBLANK(AssessmentDate__c) ,&quot; &quot;, CASE(MONTH(AssessmentDate__c), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;,
&quot;None&quot;) + &quot; &quot; + 
TEXT(DAY(AssessmentDate__c)) 
+ &quot;, &quot; + TEXT(YEAR(AssessmentDate__c))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryType__c</fullName>
        <description>Picklist field to indicate the assessment delivery method.</description>
        <label>Delivery Type</label>
        <picklist>
            <picklistValues>
                <fullName>Preassessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Proctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DoNotPushToARTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The student has made changes to this record in ARTS</description>
        <inlineHelpText>The student has made changes to this record in ARTS</inlineHelpText>
        <label>Do Not Push To ARTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Maximum time for assessment in minutes</description>
        <formula>Assessment__r.Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Maximum time for assessment in minutes</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmailText__c</fullName>
        <description>Additional custom text that that want in the email</description>
        <label>Email Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related contact that is the proctor site/vendor</description>
        <label>Entity</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Task Attempts (Entity)</relationshipLabel>
        <relationshipName>StudentTaskAttempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MentorEmail__c</fullName>
        <description>Field that is populated by the Student Task Attempt Created workflow rule. Populates the student&apos;s mentor email address to use in mail merges.</description>
        <label>Mentor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MentorName__c</fullName>
        <description>Formula field that brings over the student&apos;s current mentor name.</description>
        <formula>Student__r.Mentor__r.FirstName &amp;&quot; &quot; &amp; Student__r.Mentor__r.LastName</formula>
        <label>Mentor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes with special instructions for this attempt</description>
        <inlineHelpText>Notes with special instructions for this attempt</inlineHelpText>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreviousAttempts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of previous attempts for this student on this assessment/task</description>
        <inlineHelpText>The number of previous attempts for this student on this assessment/task</inlineHelpText>
        <label>Previous Attempts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proctor1SFID__c</fullName>
        <description>The SF ID of Proctor Site 1</description>
        <formula>ProctorSite1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proctor1SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proctor2SFID__c</fullName>
        <description>The ID for proctor Site 2 for the quick case button</description>
        <formula>ProctorSite2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proctor2SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proctor3SFID__c</fullName>
        <description>The SF ID for proctor site 3 for the quick case buttons</description>
        <formula>ProctorSite3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proctor3SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProctorAddress__c</fullName>
        <description>Calculation to decide which proctor address to show based on record type and which proctor was selected.</description>
        <formula>CASE(SelectedScheduleOption__c,  1, ProctorSite1__r.MailingStreet, 
                                 2, ProctorSite2__r.MailingStreet, 
                                 3, ProctorSite3__r.MailingStreet, null)</formula>
        <label>Proctor Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProctorCity__c</fullName>
        <description>The calculated City based on which schedule option was chosen</description>
        <formula>CASE(SelectedScheduleOption__c,  1, ProctorSite1__r.MailingCity, 
                                 2, ProctorSite2__r.MailingCity, 
                                 3, ProctorSite3__r.MailingCity, null)</formula>
        <label>Proctor City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProctorName__c</fullName>
        <description>The Name of the proctor calculated based on which selection they chose</description>
        <formula>CASE(SelectedScheduleOption__c,  1,  ProctorSite1__r.FirstName+ &quot; &quot; + ProctorSite1__r.LastName , 
                                 2,  ProctorSite2__r.FirstName+ &quot; &quot; + ProctorSite2__r.LastName ,  
                                 3, ProctorSite3__r.FirstName+ &quot; &quot; + ProctorSite3__r.LastName ,  null)</formula>
        <label>Proctor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProctorSite1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related contact that is the proctor site/vendor</description>
        <label>Proctor Site 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Task Attempts Proc1</relationshipLabel>
        <relationshipName>StudentTaskAttemptsProc1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProctorSite2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>StudentTaskAttemptsProc2</description>
        <label>Proctor Site 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Task Attempts (Proctor Site 2)</relationshipLabel>
        <relationshipName>StudentTaskAttemptsProc2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProctorSite3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The third option for the proctor site.</description>
        <inlineHelpText>The third option for the proctor site.</inlineHelpText>
        <label>Proctor Site 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Task Attempts (Proctor Site 3)</relationshipLabel>
        <relationshipName>StudentTaskAttemptsProc3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProctorSpecialInstructions__c</fullName>
        <description>Calculated Special instructions based on which proctor is selected</description>
        <formula>CASE(SelectedScheduleOption__c,  1, ProctorSite1__r.SpecialInstructions__c, 
                                 2, ProctorSite2__r.SpecialInstructions__c, 
                                 3, ProctorSite3__r.SpecialInstructions__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proctor Special Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProctorState__c</fullName>
        <description>The calculated state based on which proctor option is chosen</description>
        <formula>CASE(SelectedScheduleOption__c,  1, ProctorSite1__r.MailingState, 
                                 2, ProctorSite2__r.MailingState, 
                                 3, ProctorSite3__r.MailingState, null)</formula>
        <label>Proctor State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProctorZip__c</fullName>
        <description>Calculate the zip code based on which scheduling option is selected.</description>
        <formula>CASE(SelectedScheduleOption__c,  1, ProctorSite1__r.MailingPostalCode  , 
                                 2, ProctorSite2__r.MailingPostalCode, 
                                 3, ProctorSite3__r.MailingPostalCode, null)</formula>
        <label>Proctor Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferralKey__c</fullName>
        <description>Unique number used to identify between SalesForce and Banner.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique number used to identify between SalesForce and Banner.</inlineHelpText>
        <label>Referral Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ReferralNotes__c</fullName>
        <label>Referral Notes</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ReferralStatus__c</fullName>
        <description>The status of the Assessment Schedule Event to be synchronized with ARTS</description>
        <label>Referral Status</label>
        <picklist>
            <picklistValues>
                <fullName>Check requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kryterion Self Scheduling - Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local student confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New-Reschedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OLP appointment confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTV SHRM Request Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTV Third + Attempt Email Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTV voucher sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid by Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending 5th+ attempt approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pink Sheet Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reschedule in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled in Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Issues During Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA Confirmed in WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Order complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReferralType__c</fullName>
        <description>The Type of Referral coming in</description>
        <label>Referral Type</label>
        <picklist>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OLP Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReleaseAutomaticPending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Release automatic pending requirement in ARP for the assessment.</description>
        <label>Release Automatic Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReleaseDuplicateRequirement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Release duplicate requirement in ARP for this assessment.</description>
        <label>Release Duplicate Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reqhm1__c</fullName>
        <formula>if(isNull(TextScheduledTime1__c),NULL,
   if(right(TextScheduledTime1__c,2)=&apos;PM&apos;,
      if(left(TextScheduledTime1__c,2)=&quot;12&quot;, &quot;12&quot;,
        text(value(left(TextScheduledTime1__c,find(&quot;:&quot;,TextScheduledTime1__c)-1))+12) + left((right(TextScheduledTime1__c,5)),2) 
	   ),
	if(left(TextScheduledTime1__c,2)=&quot;12&quot;, &quot;00&quot;,
       text(value(left(TextScheduledTime1__c,find(&quot;:&quot;,TextScheduledTime1__c)-1))) + left((right(TextScheduledTime1__c,5)),2)
	 )
   )
)</formula>
        <label>Req hm1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reqhm2__c</fullName>
        <formula>if(isNull(TextScheduledTime2__c),NULL,
   if(right(TextScheduledTime2__c,2)=&apos;PM&apos;,
      if(left(TextScheduledTime2__c,2)=&quot;12&quot;, &quot;12&quot;,
        text(value(left(TextScheduledTime2__c,find(&quot;:&quot;,TextScheduledTime2__c)-1))+12) + left((right(TextScheduledTime2__c,5)),2) 
	   ),
	if(left(TextScheduledTime2__c,2)=&quot;12&quot;, &quot;00&quot;,
       text(value(left(TextScheduledTime2__c,find(&quot;:&quot;,TextScheduledTime2__c)-1))) + left((right(TextScheduledTime2__c,5)),2)
	 )
   )
)</formula>
        <label>Req hm2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reqhm3__c</fullName>
        <formula>if(isNull(TextScheduledTime3__c),NULL,
   if(right(TextScheduledTime3__c,2)=&apos;PM&apos;,
      if(left(TextScheduledTime3__c,2)=&quot;12&quot;, &quot;12&quot;,
        text(value(left(TextScheduledTime3__c,find(&quot;:&quot;,TextScheduledTime3__c)-1))+12) + left((right(TextScheduledTime3__c,5)),2) 
	   ),
	if(left(TextScheduledTime3__c,2)=&quot;12&quot;, &quot;00&quot;,
       text(value(left(TextScheduledTime3__c,find(&quot;:&quot;,TextScheduledTime3__c)-1))) + left((right(TextScheduledTime3__c,5)),2)
	 )
   )
)</formula>
        <label>Req hm3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule1Mismatch__c</fullName>
        <formula>IF(value(left(Scheduledhm1__c,2) + right(Scheduledhm1__c,2)) != (IF(ISNUMBER(Reqhm1__c), value(Reqhm1__c), 5)), true, false)</formula>
        <label>Schedule 1 Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule2Mismatch__c</fullName>
        <formula>IF(value(left(Scheduledhm2__c,2) + right(Scheduledhm2__c,2)) != (IF(ISNUMBER(Reqhm2__c), value(Reqhm2__c), 5)), true, false)</formula>
        <label>Schedule 2 Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule3Mismatch__c</fullName>
        <formula>IF(value(left(Scheduledhm3__c,2) + right(Scheduledhm3__c,2)) != (IF(ISNUMBER(Reqhm3__c), value(Reqhm3__c), 5)), true, false)</formula>
        <label>Schedule 3 Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduleDate1__c</fullName>
        <description>First date to attempt to schedule assessment</description>
        <inlineHelpText>First date to attempt to schedule assessment</inlineHelpText>
        <label>Schedule Date 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ScheduleDate2__c</fullName>
        <description>Second date to attempt to schedule the assessment</description>
        <inlineHelpText>Second date to attempt to schedule the assessment</inlineHelpText>
        <label>Schedule Date 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ScheduleDate3__c</fullName>
        <description>Third date to attempt to schedule the assessment</description>
        <inlineHelpText>Third date to attempt to schedule the assessment</inlineHelpText>
        <label>Schedule Date 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ScheduleOption1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box to indicate which schedule option was successful.</description>
        <inlineHelpText>For the combination of proctor and assessment time 1 check this box</inlineHelpText>
        <label>Schedule Option 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduleOption2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box to indicate which schedule option was successful.
Help Text</description>
        <inlineHelpText>For the combination of proctor and assessment time 1 check this box</inlineHelpText>
        <label>Schedule Option 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduleOption3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box to indicate which schedule option was successful.
Help Text</description>
        <inlineHelpText>For the combination of proctor and assessment time 1 check this box</inlineHelpText>
        <label>Schedule Option 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduledTimesMismatch__c</fullName>
        <formula>OR(value(left(Scheduledhm1__c,2) + right(Scheduledhm1__c,2)) != value(Reqhm1__c),
   value(left(Scheduledhm2__c,2) + right(Scheduledhm2__c,2)) != value(Reqhm2__c),
   value(left(Scheduledhm3__c,2) + right(Scheduledhm3__c,2)) != value(Reqhm3__c))</formula>
        <label>ScheduledTimes Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduledhm1__c</fullName>
        <formula>left(right(text(ScheduleDate1__c + TimeZoneOffset1__c/24), 9),5)</formula>
        <label>Scheduled hm1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduledhm2__c</fullName>
        <formula>left(right(text(ScheduleDate2__c + TimeZoneOffset2__c/24), 9),5)</formula>
        <label>Scheduled hm2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduledhm3__c</fullName>
        <formula>left(right(text(ScheduleDate3__c + TimeZoneOffset3__c/24), 9),5)</formula>
        <label>Scheduled hm3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScorePassFail__c</fullName>
        <label>Score Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScorePercentage__c</fullName>
        <label>Score (Percentage)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScoreRaw__c</fullName>
        <label>Score (Raw)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScoresAssessmentCode__c</fullName>
        <label>Scores Assessment Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScoresRaworPercentage__c</fullName>
        <label>Scores (Raw or Percentage)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectedScheduleOption__c</fullName>
        <description>This field summarizes which option was selected out of the proctor options</description>
        <formula>CASE(RecordType.Name,&quot;OLP Assessment&quot;,1, 
&quot;Vendor Assessment&quot;, 1, 
if( ScheduleOption1__c, 1,if(ScheduleOption2__c, 2, if(ScheduleOption3__c,3,null))))</formula>
        <label>Selected Schedule Option</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SendQuickEmail__c</fullName>
        <formula>HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p2_lkid=&quot;&amp; Student__c &amp;&quot;&amp;rtype=003&amp;retURL=/&quot;&amp;Id,IMAGE(&quot;/servlet/servlet.ImageServer?id=015a000000233aP&amp;oid=00De00000009Moo&amp;lastMod=1364401613000&quot;,&quot;Send Email&quot;),&quot;_blank&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Quick Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateRequirement__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Meets State Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StudentFirstName__c</fullName>
        <description>The first name of the student</description>
        <formula>Student__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <description>The ID of the student</description>
        <formula>Student__r.StudentID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentInputProctor1__c</fullName>
        <label>Student Input Proctor1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentInputProctor2__c</fullName>
        <label>Student Input Proctor2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentInputProctor3__c</fullName>
        <label>Student Input Proctor3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentLastName__c</fullName>
        <description>The Last Name of the student</description>
        <formula>Student__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentSFID__c</fullName>
        <description>Id field for Buttons that need it passed.</description>
        <formula>Student__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StudentSFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Task Attempts</relationshipLabel>
        <relationshipName>ScoresInformation2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TextScheduledTime1__c</fullName>
        <label>Text Scheduled Time 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextScheduledTime2__c</fullName>
        <label>Text Scheduled Time 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextScheduledTime3__c</fullName>
        <label>Text Scheduled Time 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZoneOffset1__c</fullName>
        <formula>IF(OR(
      AND(ScheduleDate1__c&gt;DateTimeValue(&apos;2014-3-9 02:00:00&apos;)+7/24,
          ScheduleDate1__c&lt;DateTimeValue(&apos;2014-11-2 02:00:00&apos;)+6/24),
      AND(ScheduleDate1__c&gt;DateTimeValue(&apos;2015-3-8 02:00:00&apos;)+7/24,
          ScheduleDate1__c&lt;DateTimeValue(&apos;2015-11-1 02:00:00&apos;)+6/24)
    ), -6, -7)</formula>
        <label>TimeZone Offset1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeZoneOffset2__c</fullName>
        <formula>IF( AND(ScheduleDate2__c&gt;DateTimeValue(&apos;2014-3-9 02:00:00&apos;)+7/24,
        ScheduleDate2__c&lt;DateTimeValue(&apos;2014-11-2 02:00:00&apos;)+6/24),
   -6, -7)</formula>
        <label>TimeZone Offset2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeZoneOffset3__c</fullName>
        <formula>IF( AND(ScheduleDate3__c&gt;DateTimeValue(&apos;2014-3-9 02:00:00&apos;)+7/24,
        ScheduleDate3__c&lt;DateTimeValue(&apos;2014-11-2 02:00:00&apos;)+6/24),
  -6, -7)</formula>
        <label>TimeZone Offset3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VendorAssessmentName__c</fullName>
        <description>Vendor Assessment name of the assessment</description>
        <formula>Assessment__r.VendorAssessmentName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Assessment Name</label>
        <type>Text</type>
    </fields>
</CustomObject>